Stackless-Python News
+++++++++++++++++++++

This file documents user visible changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.

What's New in Stackless 3.X.X?
==============================

*Release date: 20XX-XX-XX*

- https://github.com/stackless-dev/stackless/issues/221
  Fix a bug that could cause an assertion failure and a reference leak during
  the termination of a main-tasklet, if an application embeds Stackless Python.

- https://github.com/stackless-dev/stackless/issues/221
  Change the width of C-stack serial numbers to 64bit. This prevents overflows
  in long running applications with an embedded Stackless Python.
  This change affects internal Stackless C structures PyStacklessState and
  PyCStackObject. If you tamper with them, you must recompile your code!

- https://github.com/stackless-dev/stackless/issues/219
  Fix a NULL pointer access in PyStackless_Schedule, if this function is called
  from from "outside" and if no current tasklet exists.


What's New in Stackless 3.7.0 to 3.7.3?
=======================================

*Release date: 2019-03-30*  (3.7.3)
*Release date: 2019-01-19*  (3.7.2)
*Release date: 2019-01-18*  (3.7.1)
*Release date: 2019-01-18*  (3.7.0)

- https://github.com/stackless-dev/stackless/issues/208
  Move Stackless include files to Include/ and Include/internal and rename them
  to use consistent prefixes. Public includes use the prefix "stackless",
  private includes use "slp".
  Remove the special Stackless include path from Makefile*, PCbuild/*,
  Mac/Makefile* and Lib/distutils/command/build_ext.py.

- https://github.com/stackless-dev/stackless/issues/206
  Fix the error handling of the Python implementation of function-object
  pickling.

- https://github.com/stackless-dev/stackless/issues/204
  Fix bpo-24596 for Stackless too.

- https://github.com/stackless-dev/stackless/issues/202
  The private include file "stackless_methods.h" is obsolete and has been
  removed.
